# raytracing-chaos-camp-2023

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  gui_win.hpp  lib_export.h  material.h  matrix.h  renderer_lib.h  scene.h  scene_object.h  utils.h  vector.h
python-gui/: blender_renderer.py  gui.py
scripts/: blender_renderer.py  combine_images.py  gui.py  render_to_image.py
src/: lib_export.cpp  material.cpp  renderer_app.cpp  renderer_lib.cpp  scene.cpp  scene_object.cpp
